Bugfix: set letter-spacing to normal

--- a/css/all.styl
+++ b/css/all.styl
@@ -32,6 +32,7 @@
         background: rgb(242, 242, 242);
         color: color;
         font-size: 16px;
+	letter-spacing: normal;
 
         &.danger {
             outline-color: #e31c1c;
